external-crates/move/crates/move-compiler/tests/move_check/parser/phantom_param_missing_type_var.exp
error[E02004]: invalid 'module' declaration
  ┌─ tests/move_check/parser/phantom_param_missing_type_var.move:1:8
  │
1 │ module M {
  │        ^ Invalid module declaration. The module does not have a specified address. Either declare it inside of an 'address <address> {' block or declare it with an address 'module <address>::M''

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/phantom_param_missing_type_var.move:2:25
  │
2 │     struct S<T1, phantom> {
  │                         ^
  │                         │
  │                         Unexpected '>'
  │                         Expected an identifier

